# ldlite

./: .git-blame-ignore-revs  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MIGRATING.md  README.md  environment.yaml  precious.toml  pylock.lint.toml  pylock.maximal.toml  pylock.minimal.toml  pylock.toml  pyproject.toml  requirements.txt  setup.cfg  srs.md
.github/workflows/: lint.yaml  test.yaml
doc/: index.html
doc/ldlite/: _csv.html  _jsonx.html  _sqlx.html
docs/: index.html  ldlite.html  search.js
docs/ldlite/: _camelcase.html  _csv.html  _jsonx.html  _query.html  _request.html  _select.html  _sqlx.html  _xlsx.html
example/: example.md
examples/: example.md  folio_demo.py  snapshot.py
examples/src/ldlite/: __init__.py  _camelcase.py  _csv.py  _xlsx.py
src/ldlite/: .env  __init__.py  _auth.py  _camelcase.py  _csv.py  _database.py  _folio.py  _jsonx.py  _loader.py  _process_query.py  _queries.py  _query.py  _request.py  _select.py  _sqlx.py  _xlsx.py  folio.py  ldlite.py  select.py  test___init__.py
src/ldlite/_database/: __init__.py  duckdb.py  postgres.py  typed_database.py
src/ldlite/database/: __init__.py  _duckdb.py  _expansion_node.py  _postgres.py  _prefix.py  _typed_database.py
src/ldlite/database/_expansion/: __init__.py  context.py  fixed_nodes.py  metadata.py  node.py  nodes.py  recursive_nodes.py  rewrite.py
src/test/: test___init__.py
tests/: README.md  conftest.py  mock_response_case.py  test___init__.py  test_drop_tables.py  test_duckdb.py  test_endtoend.py  test_expansion.py  test_export_csv.py  test_folio.py  test_json_operators.py  test_ldlite.py  test_load_history.py  test_postgres.py  test_query.py  test_sqlite.py
tests/drop_tables/: drop_tables_cases.py  test_duckdb.py  test_postgres.py  test_sqlite.py
tests/export_csv_samples/: basic.csv  escaped_chars.csv
tests/query/: README.md  cases.py  expansion_cases.py  test_duckdb.py  test_postgres.py  test_sqlite.py
tests/test_cases/: base.py  drop_tables_cases.py  folio_query_cases.py  load_history_cases.py  query_cases.py  to_csv_cases.py
tests/test_cases/to_csv_samples/: basic.csv  datatypes.csv  escaped_chars.csv  sorting.csv
tests/test_folio/: test_integration.py  test_query.py
