[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ldlite"
version = "3.2.0"
description = "Lightweight analytics tool for FOLIO services"
authors = [
    {name = "Katherine Bargar", email = "kbargar@fivecolleges.edu"},
    {name = "Nassib Nassar", email = "nassib@indexdata.com"},
]
dependencies = [
    # 0.7.0 makes numpy an optional dependency
    # 1.4 slightly changes data formats and fails tests
    "duckdb>=0.7.0,<1.4",
    # 4.64.0 is the first release with type stubs
    "tqdm>=4.64.0",
    # 0.2 has query parameter handling, 0.2.3 is a required bug fix version
    "httpx-folio>=0.2.3",
    # 3.9 introduces orjson.Fragment
    "orjson>=3.9",
    # 3.2 changes the sql.SQL.format signature
    "psycopg>=3.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/library-data-platform/ldlite"
"Bug Tracker" = "https://github.com/library-data-platform/ldlite/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["FBT", "D105", "FIX002", "PLR2004", "TD002", "TD003", "COM812"]
pydocstyle.convention = "google"
[tool.ruff.lint.per-file-ignores]
"examples/*" = ["D", "INP001", "T201", "S106", "ERA001", "PERF203"]
"tests/*" = ["D", "S", "INP001", "N813", "PLC0415"]
"src/ldlite/{_csv.py,_jsonx.py,_select.py}" = ["S608"]
"src/ldlite/__init__.py" = ["T201"]
[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.coverage.run]
branch = true
include = ["src/**"]

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pdm.scripts]
test.composite = ["rm -f .coverage", "python -m coverage run -m pytest -vv {args}", "python -m coverage report"]
lock.composite = ["rm -f pylock.toml pylock.maximal.toml pylock.minimal.toml", "pdm lock --python=3.10", "pdm lock --lockfile pylock.maximal.toml --python=3.13", "pdm lock --strategy direct_minimal_versions --lockfile pylock.minimal.toml --python=3.10"]
test-install.composite = ["pdm sync --lockfile=pylock.minimal.toml", "pdm sync --lockfile=pylock.toml"]

[dependency-groups]
lint = [
    "mypy==1.17.0",
    "ruff==0.12.5",
    "pre-commit-hooks==5.0.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cases>=3.9.1",
    "coverage>=7.9.2",
]
types = [
    "types-tqdm>=4.64.0",
]
