[metadata]
name = ldlite
version = 0.0.34
author = Nassib Nassar
author_email = nassib@indexdata.com
description = Lightweight analytics tool for Okapi-based services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/library-data-platform/ldlite
project_urls =
    Bug Tracker = https://github.com/library-data-platform/ldlite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    duckdb==0.5.1
    pandas==1.4.2
    psycopg2==2.9.3
    requests==2.27.1
    tqdm==4.64.0
    XlsxWriter==3.0.3

[options.packages.find]
where = src

